# rt-fft-convolver

./: .gitignore  .woodpecker.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  flake.nix  justfile  rust-toolchain.toml  shell.nix
docs/: Nix.md  Roadmap.md
src/: error.rs  lib.rs
src/dsp/: direct.rs  fft_handler.rs  mod.rs
src/engine/: fdl.rs  mixer.rs  mod.rs  partition.rs  stereo.rs
src/utils/: denormals.rs  mod.rs  resampler.rs
