[package]
name = "rt-fft-convolver"
authors = ["Sébastien LUNDI"]
description = "A high-performance, zero-latency partitioned convolution engine. Designed specifically for real-time guitar cabinet simulation and reverb effects with SIMD optimizations and anti-denormal protection."
readme = "README.md"
license = "MIT"
repository = "https://codeberg.org/slundi/MY_PROJECT"
keywords = ["dsp", "fft", "convolution", "audio", "guitar-effects"]
categories = ["multimedia::audio", "rendering::engine"]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "MY_PROJECT"
# path = "src/lib.rs"

# [[bin]]
# name = "MY_PROJECT"
# path = "src/main.rs"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    # "x86_64-apple-darwin",
    # "x86_64-pc-windows-msvc",
    # "i686-unknown-linux-gnu",
    # "i686-pc-windows-msvc"
]


[dependencies]
hound = "3.5"
rubato = "2.0"
rustfft = "6.4"
wide = "1.3"

[workspace.metadata.cargo-machete]
ignored = []

# --- Profiles ---

# Standard Dev Profile (Optimized for speed of compilation)
[profile.dev]
opt-level = 0
debug = true

# Production Release Profile
# This ensures the Nix-built binary is highly optimized
[profile.release]
opt-level = 3     # Max optimizations
lto = "fat"       # Link Time Optimization (smaller, faster binary)
codegen-units = 1 # Better optimizations at the cost of compile time
panic = "abort"   # Removes stack unwinding (smaller binary size)
strip = true      # Automatically strips symbols/debug info (like 'strip' command)

# Profile for Benchmarking
[profile.bench]
extend = "release"
debug = false

# --- Features ---
# [features]
# default = []
# async = ["dep:tokio"] # must be in dependencies
